# api/src/controllers/overview.controller.ts
@@ -19,3 +19,30 @@ export const getOverview = async (
     next(err);
   }
 };
+
+export const getMyOverview = async (
+  req: Request,
+  res: Response,
+  next: NextFunction,
+) => {
+  try {
+    const userId = req.user!.userId!;
+    const range = req.query['range'] as overviewService.OverviewRange;
+    successResponse(res, await overviewService.getMyOverview(userId, range));
+  } catch (err) {
+    next(err);
+  }
+};
+
+export const getMyUpcoming = async (
+  req: Request,
+  res: Response,
+  next: NextFunction,
+) => {
+  try {
+    const userId = req.user!.userId!;
+    successResponse(res, await overviewService.getMyUpcoming(userId));
+  } catch (err) {
+    next(err);
+  }
+};
